# drone_detect

./: CMakeLists.txt  package.xml
detect/include/: detect.h
detect/src/: detect.cpp
drone_detecter/include/: drone_detecter.h
drone_detecter/src/: drone_detecter.cpp
launch/: drone_detect.launch.py
model_detecter/include/: model_detecter.h
model_detecter/src/: model_detecter.cpp
pnp/include/: pnp.h
pnp/src/: pnp.cpp
